# recite

./: LICENSE  README.md  b  c  e  features.md  g  notes.md  recite.cabal  t
app/: Main.hs
sample/: recite.conf  recite.yaml  recite.yml
src/: Classes.hs  CommandParser.hs  CommonParser.hs  ConfigParser.hs  FileUtil.hs  Lib.hs  MainR.hs  Print.hs  Process.hs  RIO.hs  RM.hs  RMProcess.hs  RProcess.hs  Search.hs  Types.hs  Util.hs  Yaml.hs
test/: CommandParserSpec.hs  CommonParserSpec.hs  ConfigParserSpec.hs  ConfigYamlSpec.hs  Gens.hs  RMSpec.hs
