name:                recite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ssanj/recite#readme
license:             BSD3
license-file:        LICENSE
author:              sanjiv sahayam
maintainer:          sanjsmailbox@gmail.com
copyright:           (c) 2017 sanjiv sahayam
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       , CommandParser
                       , CommonParser
                       , ConfigParser
                       , FileUtil
                       , MainR
                       , Print
                       , Process
                       , RIO
                       , RProcess
                       , Search
                       , Util
  build-depends:       base >= 4.7 && < 5
                       , network-uri
                       , parsec
                       , process
                       , MissingH
                       , yaml
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010

executable recite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , recite
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite recite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Driver.hs
  other-modules:       ConfigParserSpec
                       , CommonParserSpec
                       , CommandParserSpec
                       , Gens
  build-depends:       base
                       , recite
                       , parsec
                       , HUnit
                       , QuickCheck
                       , tasty
                       , tasty-discover
                       , tasty-hunit
                       , tasty-quickcheck

  ghc-options:         -Wincomplete-uni-patterns -Wincomplete-record-updates
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ssanj/recite
